# rent-a-girlfriend

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Makefile  README.md  docker-compose.yml
.github/: CODEOWNERS
services/dispute-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
services/dispute-service/deployments/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.secret.yaml.example  values.yaml
services/dispute-service/deployments/helm/: Chart.yaml  values.yaml
services/dispute-service/deployments/helm/templates/: configmap.yaml  deployment.yaml  grpcroute.yaml  hpa.yaml  httproute.yaml  secret.yaml
services/dispute-service/deployments/templates/: _helpers.tpl
services/dispute-service/deployments/templates/istio/: grpcroute.yaml  httproute.yaml
services/dispute-service/deployments/templates/k8s/: deployment.yaml  namespace.yaml  secret.yaml  service.yaml  serviceaccount.yaml
services/dispute-service/internal/: __init__.py
services/dispute-service/internal/application/command/: __init__.py  dispute.py
services/dispute-service/internal/application/port/: __init__.py
services/dispute-service/internal/application/query/: __init__.py  dispute.py
services/dispute-service/internal/application/saga/: __init__.py  payout_saga.py  refund_saga.py
services/dispute-service/internal/bootstrap/: __init__.py
services/dispute-service/internal/observability/: __init__.py
services/dispute-service/k8s/: configmap.yaml  deployment.yaml  secret.yaml  service.yaml
services/dispute-service/tests/: conftest.py
services/dispute-service/tests/integration/: conftest.py  test_api.py  test_dispute_commands.py  test_grpc.py  test_postgres.py  test_saga_worker.py
services/dispute-service/tests/unit/: test_adapters.py  test_dispute_aggregate.py  test_saga_state.py  test_value_objects.py
services/interaction-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.rs
services/interaction-service/deployments/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.secret.yaml.example  values.yaml
services/interaction-service/docs/adr/: 0001-use-database-url-connection.md  0002-implement-graceful-shutdown.md
services/interaction-service/migrations/: 20260522000000_init_interaction.sql  20260523000000_add_processed_events.sql  20260531000000_add_chat_room_lock_at.sql  20260531010000_add_outbox_locked_until.sql  20260614000000_add_outbox_booking_id.sql
services/interaction-service/src/: domain.rs  infrastructure.rs  interfaces.rs  lib.rs  main.rs
services/interaction-service/src/application/: chat_use_cases.rs  mod.rs  ports.rs  review_use_cases.rs
services/interaction-service/src/domain/: chat_room.rs  errors.rs  events.rs  mod.rs  review.rs  value_objects.rs
services/interaction-service/src/infrastructure/: broker.rs  chat_lock_worker.rs  db_cleanup_worker.rs  mod.rs  persistence.rs
services/interaction-service/src/interfaces/: grpc.rs  http.rs  listeners.rs
services/interaction-service/tests/: integration_tests.rs
services/profile-service/: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  main.py  openapi.json  pyproject.toml
services/profile-service/api/: openapi.json
services/profile-service/api/asyncapi/: asyncapi.yaml
services/profile-service/api/openapi/: openapi.yaml
services/profile-service/api/proto/: profile.proto
services/profile-service/deployments/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.secret.yaml.example  values.yaml
services/profile-service/deployments/helm/: Chart.yaml  values.dev.yaml  values.prod.yaml  values.yaml
services/profile-service/deployments/templates/: _helpers.tpl
services/profile-service/docs/adr/: 0001-implement-graceful-shutdown.md
services/profile-service/internal/bootstrap/: __init__.py
services/profile-service/scripts/: generate_openapi.py
services/profile-service/tests/: conftest.py
services/profile-service/tests/integration/: conftest.py  test_api.py  test_grpc.py
services/profile-service/tests/unit/: test_domain.py  test_outbox.py
(+835 files in other folders)
