[project]
name = "dispute-service"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0",
    "asyncpg>=0.30.0",
    "fastapi>=0.136.1",
    "greenlet>=3.5.1",
    "grpcio>=1.62.0",
    "protobuf",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "grpcio-tools>=1.62.0",
    "httpx>=0.28.1",
    "pytest-asyncio>=0.23.0",
    "pytest-mock>=3.15.1",
    "pytest>=8.0.0",
    "ruff>=0.9.0",
    "testcontainers[postgres]>=4.14.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

