[package]
name = "interaction-service"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime
tokio = { version = "1.52.3", features = ["full"] }

# Web Framework (Axum)
axum = "0.8.9"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }

# gRPC Framework (Tonic)
tonic = "0.14.6"
tonic-prost = "0.14.6"
prost = "0.14.3"

# Database (SQLx Postgres)
sqlx = { version = "0.9.0", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "chrono",
    "uuid",
    "macros",
    "migrate"
] }

# Message Broker (Kafka)
rdkafka = { version = "0.37.0", features = ["tokio", "cmake-build"] }

# Serialization & Utilities
async-trait = "0.1.80"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenvy = "0.15.7"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.6"

[dev-dependencies]
# Standard testing support
mockall = "0.12"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }
