[project]
name = "profile-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.14.0",
    "boto3>=1.43.9",
    "fastapi>=0.136.1",
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "jsonschema>=4.26.0",
    "openapi-core>=0.23.1",
    "psycopg2-binary>=2.9.12",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.49",
    "uvicorn>=0.47.0",
    "asyncpg>=0.30.0",
    "aiosqlite>=0.20.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "testcontainers[kafka,postgres]>=4.9.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
